20020404
 - (stevesk) [auth-pam.c auth-pam.h auth-passwd.c auth-sia.c auth-sia.h
    auth1.c auth2.c] PAM, OSF_SIA password auth cleanup; from djm.

20020402
 - (bal) Hand Sync of scp.c (reverted to upstream code)
   - deraadt@cvs.openbsd.org 2002/03/30 17:45:46
     [scp.c]
     stretch banners
 - (bal) CVS ID sync of uidswap.c
 - (bal) OpenBSD CVS Sync (now for the real sync)
   - markus@cvs.openbsd.org 2002/03/27 22:21:45
     [ssh-keygen.c]
     try to import keys with extra trailing === (seen with ssh.com < 2.0.12)
   - markus@cvs.openbsd.org 2002/03/28 15:34:51
     [session.c]
     do not call record_login twice (for use_privsep)
   - markus@cvs.openbsd.org 2002/03/29 18:59:32
     [session.c session.h]
     retrieve last login time before the pty is allocated, store per session
   - stevesk@cvs.openbsd.org 2002/03/29 19:16:22
     [sshd.8]
     RSA key modulus size minimum 768; ok markus@
   - stevesk@cvs.openbsd.org 2002/03/29 19:18:33
     [auth-rsa.c ssh-rsa.c ssh.h]
     make RSA modulus minimum #define; ok markus@
   - markus@cvs.openbsd.org 2002/03/30 18:51:15
     [monitor.c serverloop.c sftp-int.c sftp.c sshd.c]
     check waitpid for EINTR; based on patch from peter@ifm.liu.se
   - markus@cvs.openbsd.org 2002/04/01 22:02:16
     [sftp-client.c]
     20480 is an upper limit for older server
   - markus@cvs.openbsd.org 2002/04/01 22:07:17
     [sftp-client.c]
     fallback to stat if server does not support lstat
   - markus@cvs.openbsd.org 2002/04/02 11:49:39
     [ssh-agent.c]
     check $SHELL for -k and -d, too;
     http://bugzilla.mindrot.org/show_bug.cgi?id=199
   - markus@cvs.openbsd.org 2002/04/02 17:37:48
     [sftp.c]
     always call log_init()
   - markus@cvs.openbsd.org 2002/04/02 20:11:38
     [ssh-rsa.c]
     ignore SSH_BUG_SIGBLOB for ssh-rsa; #187
 - (bal) mispelling in uidswap.c (portable only)

20020401
 - (stevesk) [monitor.c] PAM should work again; will *not* work with
   UsePrivilegeSeparation=yes.